# bstseal

./: .gitignore  111  111.pub  CHANGELOG.md  Cargo.toml  LICENSE_COMMERCIAL.md  PRICING.md  README.md  SPEC.md  sample_data.txt  sample_data.txt.bsts
.github/workflows/: ci.yml  deploy-landing.yml  release.yml
benches/: decode.rs
bindings/node/: build.js  index.js  package-lock.json  package.json
bindings/unity/: Bstseal.cs
crates/bstseal-cli/: Cargo.toml
crates/bstseal-cli/src/: main.rs
crates/bstseal-core/: Cargo.toml
crates/bstseal-core/benches/: decode.rs
crates/bstseal-core/src/: block_coder.rs  encode.rs  huff.rs  integrity.rs  lib.rs  license.rs  raw.rs  utils.rs
crates/bstseal-ffi/: Cargo.toml
crates/bstseal-ffi/include/: bstseal_c.h
crates/bstseal-ffi/src/: lib.rs
landing/: .gitignore  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.json  windsurf_deployment.yaml
landing/components/: Navbar.tsx
landing/netlify/functions/: paypal-webhook.ts
landing/pages/: _app.tsx  index.tsx  pricing.tsx
landing/pages/api/: checkout.ts
landing/utils/: license.ts
