[workspace]
resolver = "2"
members = [
    "crates/bstseal-core",
    "crates/bstseal-cli",
    "crates/bstseal-ffi"
]

[workspace.package]
version = "1.0.0"
authors = ["BST-SEAL Team <contact@bstseal.dev>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/user/bstseal"
description = "High-speed, asymmetric compression for specialized data streams."

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
byteorder = "1.5"
bytes = "1.6"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11"
log = "0.4"
rayon = "1.10"
once_cell = "1.18"
walkdir = "2.5"
thiserror = "1.0"
libc = "0.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
lto = "fat"
codegen-units = 1
panic = "abort"
